--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: .
     ports:
       - "80:8080"
+    env_file:
+      - mysql-config.env
       
   mysql:
     image: mysql:8
