--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Interview</description>
 	<properties>
 		<java.version>11</java.version>
+		<lombok.version>1.8.22</lombok.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -35,6 +36,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 	</dependencies>
 
